# worldcup

./: .gitignore  .travis.yml  LICENSE  Pipfile  README.md  pyproject.toml
tests/: test_api_parser.py  test_cli.py
worldcup/: api_parser.py  tests.py  utils.py  worldcup.py
worldcup18/: api_parser.py  utils.py  worldcup.py
